<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TransAvto.BY</string>
    <string name="action_settings">Settings</string>

    <string name="Monday">Пн</string>
    <string name="Tuesday">Вт</string>
    <string name="Wenesday">Ср</string>
    <string name="Thursday">Чт</string>
    <string name="Friday">Пт</string>
    <string name="Saturday">Сб</string>
    <string name="Sunday">Вс</string>
    <string name="DatePickerName">Выберите дату</string>

     <style name="DefaultButtonText">
       <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
     <string name="Vote4UsName">Проголосуйте за нас</string>
</resources>
